add DELETE `/economy/payouts` endpoint
